templates/console/060-Route-console.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: enmasse
  name: console
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: console
  tls:
    termination: Reencrypt
